WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
168798
Data interaction with a URL should navigate the page if the operation is not handled
https://bugs.webkit.org/show_bug.cgi?id=168798
Summary
Data interaction with a URL should navigate the page if the operation is not ...
Wenson Hsieh
Reported
2017-02-23 13:48:04 PST
<
rdar://problem/30665969
>
Attachments
Patch
(3.53 KB, patch)
2017-02-23 14:23 PST
,
Wenson Hsieh
thorton
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews105 for mac-elcapitan-wk2
(959.40 KB, application/zip)
2017-02-23 15:36 PST
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2017-02-23 14:23:47 PST
Created
attachment 302577
[details]
Patch
Build Bot
Comment 2
2017-02-23 15:36:42 PST
Comment on
attachment 302577
[details]
Patch
Attachment 302577
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/3181481
New failing tests: media/modern-media-controls/volume-down-support/volume-down-support.html
Build Bot
Comment 3
2017-02-23 15:36:45 PST
Created
attachment 302591
[details]
Archive of layout-test-results from ews105 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Wenson Hsieh
Comment 4
2017-02-23 15:40:22 PST
Landed
r212930
. EWS failure above looks unrelated.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug