Data interaction with a URL should navigate the page if the operation is not handled https://bugs.webkit.org/show_bug.cgi?id=168798 <rdar://problem/30665969>

Reviewed by Tim Horton.

Refactors some drag and drop code on the Mac, and implements PlatformPasteboard::stringForType.

* page/DragController.cpp:
(WebCore::DragController::performDragOperation):
* platform/ios/PlatformPasteboardIOS.mm:
(WebCore::PlatformPasteboard::stringForType):
* platform/mac/DragDataMac.mm:

Canonical link: https://commits.webkit.org/185805@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@212930 268f45cc-cd09-0410-ab3c-d52691b4dbfc